@@ -43,6 +43,7 @@ Version 1.4.6 - CVS
   - Removed duplicate generic_header hook call in src/right_main.php (#1269189).
   - Focus on compose screen no longer shifts automatically if user has manually
     focused somewhere herself.
+  - Fixed placement of abook_init hook.
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
